--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,10 @@ dependencies:
   flutter:
     sdk: flutter
   pull_to_refresh: ^1.6.1
+  provider: ^4.3.2+2
+  http: ^0.12.2
+  flutter_secure_storage: ^3.3.5
+
 
 
 
